src/components/Onboarding/style.module.less
@import '../../components/style/vars.less';

.onboardingContent {
  width: 100%;
  height: 90%;
  overflow: auto;
  /* Hide scrollbar */
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */

  /* Hide scrollbar for Chrome, Safari and Opera */
  &::-webkit-scrollbar {
    display: none;
  }
}

.pageContainer {
  max-width: 74rem;
  padding: 1rem 2rem;
  margin-left: auto;
  margin-right: auto;
  //margin-top: 2rem;
  margin-bottom: 2rem;

  background-color: @white;
  color: @black;
  --bg-color: @white;
  --font-color: @black;
  --secondary-color: @aqua;
  --text-on-secondary-color: @white;
  --button-font-color: @violet;
  --button-bg-color: @violetTransparent;
  --button-hover-bg-color: @violet;
  --button-hover-font-color: @white;

  @media (max-width: @breakPointM) {
    max-width: 72rem;
    padding: 1rem;
  }

  @media (max-width: @breakPointS) {
    max-width: 72rem;
    padding: 1rem;
  }
}

.moduleTitle {
  color: @violet;
}

.descriptionTextLarge {
  font-size: @DesktopFontSizeM;
  font-weight: 100;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  line-height: normal;
}

.loggedOutHint {
  text-align: center;
  margin-top: 6rem;
}

.breadcrumbContainer {
  margin-left: auto;
  margin-right: auto;
  max-width: 74rem;
  padding: 2rem 2rem 0 2rem;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;

  @media (max-width: @breakPointM) {
    //max-width: 72rem;
    padding-left: 1rem;
    padding-right: 1rem;
  }

  @media (max-width: @breakPointS) {
    margin-top: 0;
    //max-width: 71rem;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
}

.breadcrumbElement {
  padding-top: 0.75em;
  padding-bottom: 0.6em;
  width: 100%;
  background: @aqua;
  font-size: 1rem;
  text-align: center;
  color: white;
  text-decoration: none;
  cursor: pointer;

  clip-path: polygon(95% 0, 100% 50%, 95% 100%, 0% 100%, 5% 50%, 0% 0%);

  &:first-child {
    -moz-border-radius: 4px 0 0 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px 0 0 4px;
    clip-path: polygon(95% 0, 100% 50%, 95% 100%, 0% 100%, 0% 50%, 0% 0%);
  }

  &:last-child {
    width: 25%;
    background: @red;
    -moz-border-radius: 0 4px 4px 0;
    -webkit-border-radius: 0;
    border-radius: 0 4px 4px 0;
    clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 20% 50%, 0% 0%);

    @media (max-width: @breakPointM) {
      width: 50%;
      clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 10% 50%, 0% 0%);
    }
  }

  // &:nth-child(even) {
  //   background-color: darken(@aqua, 10%);
  // }

  &.breadcrumbElementActive {
    background-color: @violet;
  }

  &:hover {
    background: lighten(@violet, 5%);
  }
}

.closeButton {
  width: 0.75rem;
  height: 0.75rem;
  margin-left: 0.3rem;
  margin-bottom: 0.3rem;
  cursor: pointer;
  fill: @white;
}

.closeButtonBreadcrumb {
  width: 0.75rem;
  height: 0.75rem;
  margin-left: 45%;
  cursor: pointer;
  fill: @white;
}

.nextButton {
  color: @violet;
  border: solid 1px @violet;
  margin-bottom: 1rem;

  &:hover {
    background-color: @violet;
    color: white;
  }
}

.textArea {
  width: 100%;
  margin: 1rem 0;
}

.linkLikeFormatted {
  font-size: @MobileFontSizeM;
  text-decoration: underline;
  cursor: pointer;
  margin: 0;
}

.fullWidthFlex {
  width: 100%;
  padding: 0.5rem 0 0 0;
  display: flex;
  justify-content: space-around;
}

.lonelyCloseButton {
  background-color: @red;
  width: 2.4rem;
  border-radius: 5px;
  padding: 0.5rem 0.4rem 0.4rem 0.5rem;
  margin: 1rem;
  float: right;
  cursor: pointer;
}

.buttonRow {
  margin: 3rem 0;
  width: 100%;
}

.buttonRowSingle {
  width: 100%;
  margin: 0.5rem 0;
  border: none;
  outline: none;
}

.signYouUpMessageContainer {
  padding: 2rem;
  text-align: center;
}

.signYouUpMessage {
  color: @violet;
}

.optionSelectionContainer {
  display: flex;
  justify-content: space-around;
  margin-bottom: 1rem;
}

.selectableOption {
  padding: 1rem;
  margin: 1rem 0;
  color: @violet;
  text-align: center;
  font-size: @MobileFontSizeXL;
  border: 1px solid @violet;
  cursor: pointer;
  background-color: transparent;

  &:hover {
    background-color: @violet;
    color: white;
    text-decoration: underline;
  }
}

